--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,8 +14,8 @@
 
 <%= form_for(@user) do |f| %>
   <div>
-    <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.label :username %>
+    <%= f.text_field :username %>
   </div>
   
   <div>
